--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
 
 	<title>Svelte app</title>
 
+	<!-- Sveltstrap -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+
+	<!-- Icon -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
